# Stock_Reminder

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: alerts.py  assets.py  health.py  prices.py  statistics.py  sync_jobs.py
backend/app/core/: config.py
backend/app/db/: __init__.py  connection.py  repositories.py  schema.py  seed_alert_rules.py  seed_assets.py
backend/app/models/: __init__.py  alert.py  asset.py  price.py  statistics.py  sync_job.py
backend/app/providers/: __init__.py  akshare_provider.py  base.py  ccxt_provider.py  models.py  yfinance_provider.py
backend/app/services/: alert_service.py  data_source_spike.py  startup_check_service.py  statistics_service.py  sync_service.py
backend/app/tests/: test_alert_api.py  test_alert_repositories.py  test_alert_service.py  test_data_source_spike.py  test_db_schema.py  test_health.py  test_phase2_api.py  test_phase5_asset_api.py  test_provider_models.py  test_repositories.py  test_startup_check_service.py  test_statistics_api.py  test_statistics_service.py  test_sync_service.py
backend/scripts/: check_alerts.py  init_db.py  seed_assets.py  startup_check.py  sync_close.py  sync_history.py  sync_open.py  verify_alerts.py  verify_data_sources.py  verify_statistics.py
docs/: watchlist_update_validation_report.md
docs/launchd/: stock-reminder-alert-check.plist.example  stock-reminder-close-sync.plist.example  (+1 more)
frontend/: index.html  package-lock.json  package.json
scripts/: backup_db.sh  restore_db.sh  run_daily_sync.sh  start_local.sh
(+20 files in other folders)
