[project]
name = "stock-reminder-backend"
version = "0.1.0"
description = "Local backend for the Stock Reminder app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pandas>=2.2,<3.0",
  "yfinance>=0.2,<1.0",
  "akshare>=1.16,<2.0",
  "ccxt>=4.0,<5.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
markers = [
  "integration: tests that call live external data sources"
]
